Footer li spacing fix

--- a/app/assets/stylesheets/_main_footer.scss
+++ b/app/assets/stylesheets/_main_footer.scss
@@ -9,4 +9,9 @@
         list-style: none;
         padding-left: 0;
     }
+
+    &__list-item {
+        margin-bottom: 0;
+
+    }
 }
